--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-select": "^5.7.5"
+    "react-router-dom": "^6.20.0",
+    "react-select": "^5.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
