--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.7.5",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
